# omnipath

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .rstcheck.cfg  LICENSE  README.md  README.rst  homology_conversion.ipynb  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  references.rst  release_notes.rst
docs/source/_ext/: edit_on_github.py
docs/source/_static/css/: custom.css
omnipath/: __init__.py  _cache.py  _options.py  _utils.py  constants.py  interactions.py  options.py  requests.py
omnipath/_core/cache/: __init__.py  _cache.py
omnipath/_core/downloader/: _downloader.py
omnipath/_core/query/: __init__.py  _query.py  _query_validator.py  _types.py
omnipath/_core/requests/: __init__.py  _annotations.py  _complexes.py  _intercell.py  _request.py  _utils.py
omnipath/_core/requests/interactions/: __init__.py  _evidences.py  _interactions.py  _json.py  _utils.py
omnipath/_core/utils/: __init__.py  _docs.py  _homologene.py  _options.py  _orthology.py  _static.py
omnipath/_misc/: dtypes.py  utils.py
omnipath/constants/: __init__.py  _constants.py  _pkg_constants.py  constants.py
omnipath/requests/: __init__.py  _annotations.py  _complexes.py  _intercell.py  _request.py
omnipath/requests/interactions/: __init__.py  _interactions.py
omnipath/requests/utils/: __init__.py  _utils.py
tests/: conftest.py  test_cache.py  test_compare_R.py  test_downloader.py  test_interactions.py  test_misc.py  test_omnipath.py  test_options.py  test_orthology.py  test_query.py  test_requests.py
tests/_data/: import_intercell_result.pickle  interactions.pickle  receivers.pickle  transmitters.pickle
